--- a/templates/components/results.html
+++ b/templates/components/results.html
@@ -1,31 +1,36 @@
 {% if results %}
-<div class="space-y-4">
-    <div class="flex justify-between items-center mb-2">
-        <p class="text-sm text-slate-600 font-medium">
+<div class="space-y-4" id="results">
+    <div class="flex items-center px-6 py-3">
+        <img src="/static/icons/file-magnifying-glass-light.svg"
+            class="w-5 h-5 mr-2.5 opacity-80" />
+        <span class="text-lg font-light">
             Found {{ results|length }} results
-        </p>
+        </span>
     </div>
     {% for item in results %}
     <div
-        class="h-full bg-white rounded-xl shadow-sm hover:shadow-xl p-3 sm:p-4 lg:p-6 border border-slate-100 hover:border-purple-300 group transition-all duration-300 ease-in-out transform hover:-translate-y-1 hover:bg-gradient-to-r from-purple-50 to-white">
-        <div class="flex justify-between items-start">
-            <div>
+        class="p-6 rounded-xl shadow-sm border transform transition-all duration-300 hover:scale-[1.02] hover:-translate-y-1 hover:shadow-xl">
+        <div class="flex justify-between items-start gap-6">
+            <div class="flex-grow text-left">
                 <h3
-                    class="text-lg sm:text-xl lg:text-2xl font-medium text-slate-800 group-hover:text-purple-600 transition-colors">
-                    {{ item.city_municipality}}
+                    class="location-name text-lg sm:text-xl lg:text-2xl  text-slate-950 tracking-wide">
+                    {{ item.city_municipality }}
                 </h3>
-                <p class="text-slate-600 mt-2 group-hover:text-slate-700 transition-colors">
-                    {{ item.province }}
-                </p>
-                <p class="text-slate-500 text-sm mt-1 group-hover:text-slate-600 transition-colors">
-                    {{ item.region}}
-                </p>
+                <div class="mt-3 space-y-2.5">
+                    <p class="font-light sm:text-lg">
+                        {{ item.province }}
+                    </p>
+                    <p class="font-light sm:text-lg">
+                        {{ item.region }}
+                    </p>
+                </div>
             </div>
-            <div class="text-right">
+            <div class="flex-shrink-0">
                 <div
-                    class="flex items-center bg-purple-50 px-3 py-1 rounded-full cursor-pointer hover:bg-purple-100 transition-all duration-300 group-hover:shadow-md">
-                    <img src="/static/icons/map-pin.svg" class="w-4 h-4 mr-1 filter-purple" />
-                    <span class="text-lg font-mono text-purple-700">
+                    class="zip-badge flex items-center px-6 py-3 rounded-full border ">
+                    <img src="/static/icons/map-pin.svg"
+                        class="w-4 h-4 mr-2.5 opacity-90" />
+                    <span class="text-lg sm:text-xl text-slate-950">
                         {{ item.code }}
                     </span>
                 </div>
